Update the Windows build instructions
Rewrite the instructions using a phpize build. Test build for PHP 8.3.7
works fine when following the instructions to the letter.

refs #157