@@ -4,7 +4,10 @@ Building from source
 ====================
 
 Before attempting to build the extension, make sure the *SAP NW RFC library* is
-installed. See :ref:`installing-nwrfcsdk` for instructions.
+installed and the :ref:`library is in the path <installing-nwrfcsdk-library-path>`.
+
+See :ref:`installing-nwrfcsdk` for instructions.
+
 
 Building on Linux
 -----------------
@@ -31,109 +34,124 @@ by default:
 If you installed the library in another location, replace the ``./configure`` step
 above with ``./configure --with-sapnwrfc=/path/to/rfc-library``.
 
+
 Building on Windows
 -------------------
 
-We try to provide pre-built extensions for Windows users (see the 
-`release <https://github.com/gkralik/php7-sapnwrfc/releases>`_ page). 
-If you don't find your desired version there or still want to build yourself, follow the instructions below.
-
-To build PHP 8+ for Windows, you need Visual Studio 2019. To build PHP 7.4, Visual Studio 2017 is required.
+To build PHP 8+ for Windows, you need `Visual Studio 2019 or the Visual Studio 2019 Build Tools <https://learn.microsoft.com/en-us/visualstudio/releases/2019/history#release-dates-and-build-numbers>`_.
 The workload *Desktop development with C++* must be installed.
 
-For this guide, we assume the base directory for the build to be ``C:\Workspace\php``
-and we want to build the extension for PHP 8.0.
+The process of building PHP and extensions on Windows is `detailed in the PHP Wiki <https://wiki.php.net/internals/windows/stepbystepbuild_sdk_2>`_.
+
+The build process described below follows the steps in `Building PECL extensions with phpize <https://wiki.php.net/internals/windows/stepbystepbuild_sdk_2#building_pecl_extensions_with_phpize>`_
+and assumes you have PHP already installed on your system.
+
+If you need to compile PHP itself, follow instructions from `Build your own PHP on Windows <https://wiki.php.net/internals/windows/stepbystepbuild_sdk_2>`_.
+
+For this guide, we assume
+
+  - we want to build the extension for PHP 8.3.7,
+  - PHP 8.3.7 is installed at ``C:\php``
+  - the *SAP NW RFC library* is in ``C:\nwrfcsdk`` and ``PATH`` is configured correctly.
+  - Our working directory is ``C:\workspace``.
+
 
 Set up a build environment
 ^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-Make sure you have a valid `build enviroment as described here <https://wiki.php.net/internals/windows/stepbystepbuild_sdk_2>`_.
+Follow the steps to `set up a build enviroment as described here <https://wiki.php.net/internals/windows/stepbystepbuild_sdk_2>`_.
 
 First, open a command line (``cmd.exe``).
 
-Change to ``C:\Workspace\php`` and fetch the `latest stable PHP SDK tag <https://github.com/Microsoft/php-sdk-binary-tools>`_:
+Change to ``C:\workspace`` and fetch the `latest stable PHP SDK tag <https://github.com/php/php-sdk-binary-tools>`_:
 
 .. code-block:: none
 
-    $ git clone https://github.com/Microsoft/php-sdk-binary-tools.git php-sdk
+    $ git clone https://github.com/php/php-sdk-binary-tools.git php-sdk
     $ cd php-sdk
-    $ git checkout php-sdk-2.2.0
 
-
-Now execute the starter script for the build environment and create the buildtree:
+Now execute the starter script for the build environment:
 
 .. code-block:: none
 
     $ phpsdk-vs16-x64.bat
-    $ phpsdk_buildtree phpdev
 
-Clone the `php7-sapnwrfc <https://github.com/gkralik/php7-sapnwrfc>`_ repository
-(or download and extract a release ZIP) into the
-``php-sdk\phpdev\vs16\x64\modules\sapnwrfc`` folder and check out the tag you want to build:
-
-.. code-block:: none
-
-    $ cd php-sdk\phpdev\vs16\x64
-    $ mkdir modules
-    $ git clone https://github.com/gkralik/php7-sapnwrfc.git modules\sapnwrfc
-    $ cd modules\sapnwrfc
-    $ git checkout 2.0.0-beta3
+All commands described from here on must be executed in the shell configured by the above command.
 
 
-Download the PHP 8 source code from the `PHP for Windows download page <https://windows.php.net/download/>`_
-and extract it into ``php-sdk\phpdev\vs16\x64``.
-The source code should be in the ``php-8.0.13-src`` or similar folder.
+Building the extension using phpize
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-Alternatively, you can clone the `php-src <https://github.com/php/php-src>`_ repository and check out the desired tag.
+First, download the development package which corresponds to your pre-built PHP version and variant from `<https://windows.php.net/download/>`_.
 
-Now change to the PHP sources folder, install the PHP build dependencies:
+In our case, we download *PHP 8.3.7* -> *VS16 x64 Non Thread Safe* -> *Development package (SDK to develop PHP extensions)*
+
+Unpack the development package to ``C:\workspace\php-8.3.7-devel-vs16-x64``.
+
+Now add the development package to the path:
 
 .. code-block:: none
 
-    $ cd php-sdk\phpdev\vs16\x64\php-8.0.13-src
-    $ phpsdk_deps -u
+    $ set PATH=%PATH%;C:\workspace\php-8.3.7-devel-vs16-x64
 
-Create the configure script and add the ``modules`` directory to the module search path:
-
-.. code-block:: none
-
-    $ buildconf --add-modules-dir=..\modules
-    $ configure --help
-
-The output of the ``configure --help`` command should now include a line *--with-sapnwrfc*.
-
-Finally, extract the *SAP NW RFC SDK* to ``C:\nwrfcsdk_750`` (or any other path)
-and set the *PATH* for the current console session:
+Download and unpack or clone the source of the extension into ``C:\workspace``:
 
 .. code-block:: none
 
-    set PATH=%PATH%;C:\nwrfcsdk_750\lib
+    $ cd C:\workspace
+    $ git clone https://github.com/gkralik/php7-sapnwrfc.git php-sapnwrfc
 
-
-Build the extension
-^^^^^^^^^^^^^^^^^^^
-
-From the PHP source folder, execute ``configure``, then ``nmake`` to build the extension:
+Change to the extension's source directory and invoke ``phpize`` and ``configure``,
+passing the path to the installed PHP and the *SAP NW RFC library*:
 
 .. code-block:: none
 
-    $ configure --disable-all --enable-cli --enable-test-ini --with-sapnwrfc=shared,C:\nwrfcsdk_750
+    $ cd php-sapnwrfc
+    $ phpize
+    $ configure --with-prefix=C:\php --with-sapnwrfc=C:\nwrfcsdk
+
+Make sure the output of the ``configure`` command includes the following:
+
+.. code-block:: none
+
+    Enabled extensions:
+    ----------------------
+    | Extension | Mode   |
+    ----------------------
+    | sapnwrfc  | shared |
+    ----------------------
+
+Now build the extension:
+
+.. code-block:: none
+
     $ nmake
 
-To build a non-threadsafe version, add ``--disable-zts`` to the ``configure`` command.
+The above command's output should include *EXT sapnwrfc build complete* near the end.
 
-The extension DLL can be found in the ``x64\Release_TS`` (or ``x64\Release`` for NTS builds)
-folder and is named ``php_sapnwrfc.dll``.
+The build artifacts are located in ``x64\Release``
+(or one of the `release directories <https://wiki.php.net/internals/windows/stepbystepbuild_sdk_2#release_directories>`_ depending on your build).
 
-To see if PHP can load the extension, execute the following command:
 
-.. code-block:: none
+Running tests
+^^^^^^^^^^^^^
 
-    $ x64\Release_TS\php.exe -c x64\Release_TS\tmp-php.ini -m
-
-To execute tests, execute ``nmake test``, passing in the tests folder of the extension.
-Executing the tests requires access to a SAP system and a configuration file:
+After a successful build, you are encouraged to run tests:
 
 .. code-block:: none
 
-  $ nmake test TESTS=..\modules\sapnwrfc\tests NO_INTERACTION=1 SAPNWRFC_ONLINE=1 SAPNWRFC_CUSTOM=1
+    $ nmake test
+
+If running the tests fails with ``reason: sapnwrfc extension not loaded`` and the output includes an error similar to the one shown below,
+you have either not correctly configured the path or you have a mismatch between ZTS and NTS versions:
+
+.. code-block:: none
+
+    Warning: PHP Startup: Unable to load dynamic library 'C:\\workspace\\php-sapnwrfc\\x64\\Release\\php_sapnwrfc.dll' (tried: C:\\workspace\\php-sapnwrfc\\x64\\Release\\php_sapnwrfc.dll (The specified module could not be found), C:\php\ext\php_C:\\workspace\\php-sapnwrfc\\x64\\Release\\php_sapnwrfc.dll.dll (The specified module could not be found)) in Unknown on line 0
+
+
+You can update the path temporarily to make the tests run with the following command:
+
+.. code-block:: none
+
+    $ set PATH=%PATH%;C:\nwrfcsdk\lib
